# tagsinate

./: .gitignore  .tagsinate-config.json  .vim-runit-cmd.bat  Cargo.toml  LICENSE  README.md
src/: args.rs  config.rs  main.rs
