[package]
name = "tagsinate"
version = "0.1.0"
description = "Generate tags based on config file"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
colored = "2.1.0"
